--- a/assets/src/components/_general.scss
+++ b/assets/src/components/_general.scss
@@ -122,7 +122,7 @@ ul {
 		p {
 			font-size: 1rem;
 
-			a {
+			a.btn-link {
 				display: block;
 				white-space: nowrap;
 				margin-top: 16px;
